# CampaignFastAPI

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CHEATSHEET.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 309a1933df3f_add_metric_source_and_user_table.py  62cee4a6b7ed_initial_schema.py  dfa4a25f4e9e_add_period_start_and_period_end_to_.py
app/: auth.py  constants.py  database.py  error_handlers.py  exceptions.py  main.py  middleware.py
app/crud/: __init__.py  campaign.py  metric.py
app/models/: __init__.py  base.py  campaign.py  client.py  metric.py  user.py
app/repositories/: __init__.py  base.py  campaign.py  client.py  metric.py  user.py
app/routers/: campaigns.py  clients.py  demo_seed.py  metrics.py  user.py
app/schema/: __init__.py  campaign.py  client.py  demo_seed.py  error.py  metric.py  pagination.py  user.py
app/services/: __init__.py  campaign.py  client.py  demo_seed.py  metric.py  user.py
tests/: .coverage  conftest.py
tests/crud/: test_campaign.py  test_metric.py
tests/helpers/: campaign.py
tests/models/: test_campaign.py  test_client.py  test_metric.py  test_user.py
tests/repositories/: test_campaign.py  test_client.py  test_metric.py  test_user.py
tests/routers/: conftest.py  test_campaigns.py  test_clients.py  test_demo_seed.py  test_logging.py  test_metrics.py  test_user.py
tests/schema/: test_client.py  test_metric.py  test_user.py
tests/services/: test_campaign.py  test_client.py  test_metric.py  (+2 more)
