[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.8",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock-resources[docker,postgres-async]>=2.12.4",
    "ruff>=0.15.10",
]

[tool.uv.workspace]
members = [
    "campaign-tracker",
]
